--- a/style/main.css
+++ b/style/main.css
@@ -16,6 +16,7 @@ body {
     background: var(--preto-netflix);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0 auto;
+    color: white;
 }
 
 header .container {
@@ -24,6 +25,7 @@ header .container {
     justify-content: space-between;
     max-width: 1200px;
     margin: 0 auto;
+    padding: 8px 0;
 }
 
 header .logo {
@@ -42,3 +44,25 @@ header nav a {
 header nav a:hover {
     color: #fff;
 }
+
+.titulo {
+    font-size: 3rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    text-transform: uppercase;
+}
+
+.filme-principal {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    font-size: 1.2rem;
+    background: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2) 100%), url('../img/house-of-cards-capa.jpeg');
+    height: 90vh;
+    background-size: cover;
+    background-repeat: no-repeat;    
+    margin: 0 auto;
+    width: 100%;
+}
+
