--- a/style/main.css
+++ b/style/main.css
@@ -9,12 +9,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    text-decoration: none;  
+    text-decoration: none;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
     background: var(--preto-netflix);
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0 auto;
     color: white;
 }
@@ -64,5 +64,31 @@ header nav a:hover {
     background-repeat: no-repeat;    
     margin: 0 auto;
     width: 100%;
+}
+
+.descricao {
+    font-weight: 200;
+}
+
+.botao {
+    border: none;
+    background-color: rgba(0,0,0,0.50);
+    color: #aaa;
+    padding: 15px 30px;
+    margin-top: 30px;
+    font-size: 0.9em;
+    text-transform: capitalize;
+    transition: all 0.3s ease-in-out;
+}
+
+.botao:hover {
+    background-color: white;
+    color: rgb(0 0 0 / 70%);
+    cursor: pointer;
+}
+
+button svg, button i {
+    padding-right: 2px;
+    margin-right: 4px;
 }
 
