--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-
 :root {
     --vermelho-netflix: #e50914;
     --preto-netflix: #141414;
@@ -30,7 +28,7 @@ header .container {
 
 header .logo {
     color: var(--vermelho-netflix);
-    font-family: 'Bebas Neue', cursive, Arial, Helvetica, sans-serif;
+    font-family: 'Bebas Neue', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 3rem;
     margin-left: 10px;    
 }
@@ -45,9 +43,13 @@ header nav a:hover {
     color: #fff;
 }
 
+.container {
+    max-width: 1200px;
+    margin: 0 18.8%;
+}
+
 .titulo {
     font-size: 3rem;
-    margin-top: 1rem;
     margin-bottom: 1rem;
     text-transform: uppercase;
 }
@@ -59,11 +61,12 @@ header nav a:hover {
     align-items: flex-start;
     font-size: 1.2rem;
     background: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2) 100%), url('../img/house-of-cards-capa.jpeg');
-    height: 90vh;
+    height: 75vh;
     background-size: cover;
     background-repeat: no-repeat;    
     margin: 0 auto;
     width: 100%;
+    padding-bottom: 3%;
 }
 
 .descricao {
@@ -92,3 +95,26 @@ button svg, button i {
     margin-right: 4px;
 }
 
+
+
+
+@media (max-width: 800px) {
+    .container {
+        margin: 0 10%;
+    }
+
+    .descricao {
+        font-size: 0.9em;
+        font-weight: 300;
+        margin-bottom: 20px;
+    }
+
+    .botao {
+        margin: 5px 0;
+        width: 100%;
+    }
+
+    .filme-principal {
+        height: 50vh;
+    }
+}
