--- a/style/main.css
+++ b/style/main.css
@@ -11,6 +11,7 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+
 body {
     background: var(--preto-netflix);
     margin: 0 auto;
@@ -95,18 +96,43 @@ button svg, button i {
     margin-right: 4px;
 }
 
+.box-filme {
+    height: 100%;
+    width: 100%;
+    display: block;
+}
+
+.owl-item.active {
+    zoom: 0.8;
+}
+
+.owl-item {
+    zoom: 0.8;
+}
+
 
 
 
 @media (max-width: 800px) {
     .container {
         margin: 0 10%;
+    }  
+
+    .carrosel-filmes {
+        max-width: 1200px;
+        margin: -3% auto 0 auto;
+    }
+
+    .titulo {
+        font-size: 2rem;
+        text-align: center;
     }
 
     .descricao {
-        font-size: 0.9em;
-        font-weight: 300;
+        font-size: 0.8em;
+        font-weight: 200;
         margin-bottom: 20px;
+        text-align: center;
     }
 
     .botao {
@@ -114,7 +140,19 @@ button svg, button i {
         width: 100%;
     }
 
+    header .container {
+        display: block;
+        margin: 0 auto;
+        text-align: center;
+        padding: 18px 0;
+    }
+
     .filme-principal {
-        height: 50vh;
+        height: 90vh;
+        background-position: center;
+    }
+
+    .owl-item {
+        zoom: 0.5;
     }
 }
